--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ingredients-client"]
 	path = ingredients-client
-	url = ./ingredients-client
+	url = https://github.com/gajendrajena/ingredients-client
