--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "list-of-ingredients",
   "license": "MIT",
   "engines": {
-    "node": "8.9.4",
+    "node": "8.15.0",
     "yarn": "1.6.0"
   },
   "scripts": {
-    "build": "yarn --cwd ingredients-client install && yarn --cwd client build",
+    "build": "yarn --cwd ingredients-client install && yarn --cwd ingredients-client build",
     "deploy": "cp -a ingredients-client/build/. public/",
     "heroku-postbuild": "yarn build && yarn deploy"
   }
