--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "yarn": "1.6.0"
   },
   "scripts": {
-    "build": "yarn --cwd ingredients-client install && yarn --cwd client build",
+    "build": "yarn --cwd ingredients-client install && yarn --cwd ingredients-client build",
     "deploy": "cp -a ingredients-client/build/. public/",
     "heroku-postbuild": "yarn build && yarn deploy"
   }
